fixed paragraph text alignment in modals

--- a/app/css/main.modals.less
+++ b/app/css/main.modals.less
@@ -45,6 +45,7 @@
                     p {
                         text-transform: uppercase;
                         color: #888;
+                        text-align: left;
                     }
                 }
                 
@@ -167,6 +168,10 @@
 
 @config-color: #52C591;
 .modal .modal-dialog .modal-content .modal-body {
+    p {
+        text-align: left;
+    }
+
     h3 { 
         font-size: 1.1em;
         margin: 1em 0 0.5em 0;
